--- a/assets/package.json
+++ b/assets/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "todomvc-app-css": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
